fixed the gallery overflow for the mobile

--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -9,6 +9,14 @@
   background-repeat: no-repeat;
   width: 100%;
 
+  @include onMobile {
+    margin-top: 417px;
+  }
+
+  @include onTablet {
+    margin-top: 0;
+  }
+
   &__form {
     display: flex;
   }
